syntax = "proto3";

option go_package = "github.com/begmaroman/beaconspot/proto/health";

package health;

message HealthResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
    string message = 2;
}
